fix(issue 29): Make each section fill up one screen height so the next section is not visible too early

--- a/css/headers.css
+++ b/css/headers.css
@@ -16,7 +16,7 @@ h2 {
   max-width: var(--max-width);
   position: relative;
   width: 90%;
-  height: 1vh;
+  height: var(--header-height);
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
